# creditnexus

./: -  .bandit  .cursor.tar  .env.example  .gitignore  .pre-commit-config.yaml  .python-version  .replit  .secrets.baseline  .zap-baseline.conf  ENHANCED_IMPLEMENTATION_SUMMARY.md  LICENCE.md  OPENFIN_SETUP.md  README.md  REMOTE_VERIFICATION_IMPLEMENTATION.md  SECURITY.md  check_indent.py  launch_openfin.ps1  link.tonic  new_changes_summary.md  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  run_backend.py  run_dev.py  run_openfin.ps1  run_openfin.sh  sample_credit_agreement.txt  sampleloanagreement.txt  server.py
.github/: dependabot.yml
.github/workflows/: deploy-project-site.yml  desktop-release.yml  mintlify-deploy.yml  security-scan.yml
alembic/: env.py
alembic/client/: package-lock.json  package.json
alembic/versions/: 07d94713c2c5_fix_payment_event_and_notarization_.py  1e2d90fbb7c1_add_demo_data_tracking.py  20250110115235_add_remote_verification_and_notarization.py  33ad1d92fa83_add_securitization_tables.py  36f2a45609b9_add_business_intelligence_tables.py  3a7f8b9c1d2e_add_loan_assets_table.py  3c27a125f86c_merge_verification_and_green_finance_.py  413e2bd62d87_add_signup_approval_fields.py  (+35 more)
app/: financial_engine.py
attached_assets/: Pasted-Here-is-a-comprehensive-Master-Prompt-designed-to-be-pa_1765175560712.txt
chroma_db/: chroma.sqlite3
client/: electron-builder.yml  eslint.config.js  package-lock.json  package.json  tailwind.config.js  tsc_errors.txt  vite.config.ts
contracts/: .npmrc  README.md  SecuritizationPaymentRouter.sol  SecuritizationToken.sol  hardhat.config.js  package-lock.json  package.json
data/: demo_deal_config.json  templates_metadata.json
docs/: CONTRIBUTING.md  INCIDENT_RESPONSE.md  SECURITY.md  VULNERABILITY_MANAGEMENT.md  docs.json  field_coverage_analysis.md  frontend-consistency.md
finsemble/: README.md  appConfig.json  channels.json
openfin/: README.md  app.json  fdc3-intents.json  provider.json
project-site/: README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: backend.spec  count_components.py  create_demo_user.py  create_template_files.py  fix_audit_logs_ip_address_length.py  generate_dummy_templates.py  launch_openfin.ps1  launch_openfin.sh  main.py  main_long_doc.py  migrate_to_encryption.py  rotate_encryption_key.py  run_openfin.ps1  run_openfin.sh  seed_demo_users.py  seed_field_mappings.py  seed_permissions.py  seed_policies.py  seed_policy_templates.py  seed_templates.py  setup_chatbot_kb.py  start_remote_api.py  test_twilio_curl.ps1  test_twilio_curl.sh  test_twilio_send.py  update_dates.py  update_demo_user_email.py  validate_templates.py  verify_env.py  verify_mappings.py
tests/: test_api.py  test_config_routes.py  test_db_ssl_config.py  test_db_ssl_integration.py  test_filing_form_generation_chain.py  test_filing_requirement_chain.py  test_filing_service.py  test_integration_filing_workflow.py  test_integration_signature_workflow.py  test_loan_recovery_service.py  test_policy_filing_methods.py  test_recovery_api.py  test_recovery_integration.py  test_signature_request_chain.py  test_signature_service.py  test_twilio_service.py  test_verification_file_config.py
(+520 files in other folders)
