[project]
name = "creditnexus"
version = "1.0.0"
description = "Financial AI platform for credit agreement extraction and sustainability-linked loan verification"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "CreditNexus Team"}
]
keywords = ["finance", "ai", "llm", "cdm", "sustainability", "loans"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core LangChain & LLM
    "langchain>=0.1.0",
    "langchain-openai>=0.1.7",
    "langchain-huggingface",
    "langchain[huggingface]",
    # Core Framework
    "pydantic>=2.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    # Web Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "starlette",
    "httpx",
    # Database & ORM
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "pgvector>=0.2.5",
    "sqlmodel>=0.0.16",
    # Authentication & Security
    "authlib",
    "itsdangerous",
    "PyJWT",
    "python-jose[cryptography]",
    "bcrypt",
    "passlib",
    "email-validator",
    # Document Processing
    "PyPDF2>=3.0.0",
    "pymupdf",
    "python-docx>=1.1.0",
    "openpyxl",
    # Data Processing
    "pandas",
    "numpy>=1.24.0",
    # Ground Truth Protocol - Geospatial Intelligence
    "sentinelhub>=3.10.1",
    "rasterio>=1.3.9",
    "shapely>=2.0.3",
    "torchgeo>=0.5.1",
    "geopy>=2.4.1",
    # Map Visualization
    "folium>=0.15.1",
    # AI & ML
    "sentence_transformers",
    "huggingface_hub",
    # Policy Engine & Configuration
    "pyyaml>=6.0",
    "watchdog>=3.0",
    # Document Retrieval
    "chromadb>=0.4.0",
    "logfire>=4.17.0",
    "logfire-api>=4.17.0",
    "opentelemetry-sdk>=1.37.0",
    "opentelemetry-exporter-otlp-proto-http>=1.37.0",
    "opentelemetry-api>=1.37.0",
    "icalendar>=6.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio",
    "pytest-cov",
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "node_modules",
    "client",
    "alembic/versions",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

